--- a/languages/cs_CZ.po
+++ b/languages/cs_CZ.po
@@ -13,12 +13,12 @@ msgid "Položka ceníku"
 msgstr "Položka ceníku"
 
 #: price-plugin.php:28
-msgid "Skupiny ceníků"
-msgstr "Skupiny ceníků"
+msgid "Kategorie ceníků"
+msgstr "Kategorie ceníků"
 
 #: price-plugin.php:29
-msgid "Skupina ceníků"
-msgstr "Skupina ceníků"
+msgid "Kategorie ceníků"
+msgstr "Kategorie ceníků"
 
 #: price-plugin.php:42
 msgid "Detaily položky"
